<resources>
    <string name="app_name">Madison Partner</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home_info">Información</string>
    <string name="home_orders">Solicitudes</string>
    <string name="openDrawer">Abrir Drawer</string>
    <string name="closeDrawer">Cerrar Drawer</string>
    <string name="drawer_menu_account">Cuenta</string>
    <string name="drawer_menu_history">Historial</string>
    <string name="drawer_menu_settings">Configuracion</string>
    <string name="drawer_menu_help">Ayuda</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="business_name">Nombre del negocio</string>
    <string name="business_description">Descripcion del negocio</string>
    <string name="respond_request">Responder Solicitud</string>
    <string name="action_filter">Filtrar</string>
    <string name="all">Todos</string>
    <string name="send">Enviados</string>
    <string name="asigned">Asignados</string>
    <string name="done">Completos</string>
    <string name="canceled">Cancelados</string>
    <string name="choose_categories">Agregar Categorias</string>
    <string name="wrong_credentials">Datos incorrectos</string>
    <string name="choose_your_category">Elige la categoría que deseas agregar</string>
    <string name="title_activity_incoming_request">Nueva Solicitud</string>
    <string translatable="false" name="installation_already_saved">intallation_saved</string>
    <string name="accept_request">Aceptar</string>
    <string name="decline_request">Rechazar</string>
    <string name="title_activity_date_and_time">DateAndTimeActivity</string>
    <string name="set_date">Elige la fecha en la que acudirás  (Te recomendamos que sea en el menor tiempo posible)</string>
    <string name="set_time">Elige la hora en la que acudirás  (Te recomendamos que sea en el menor tiempo posible)</string>
    <string name="choose_a_date">Elige la fecha en la que acudiras a realizar el servicio</string>
    <string name="choose_a_time">Elige la hora en la que acudiras a realizar el servicio</string>
    <string name="incoming_request_dialog">Atenderas esta petición el día:\n%1$s</string>
    <string name="incoming_request_dialog_title">Confirmar</string>
    <string name="yes">Aceptar</string>
    <string name="no">Cancelar</string>
    <string name="invalid_date">No creemos que llegues a tiempo, elige una fecha posterior a la actual</string>
    <string name="choose_another_date">Elige otra fecha</string>
    <string name="title_activity_employee_list">Elige quién realizará el servicio</string>
    <string name="data_saved">Datos guardados</string>
    <string name="data_not_saved">La informacion no se pudo guardar. Intentalo mas tarde</string>
    <string name="name_required">Ingresa el nombre del negocio</string>
    <string name="description_required">Ingresa la descripción del negocio</string>
    <string name="order_not_sent">No pudimos notificar al cliente, intenta contactarlo de nuevo</string>
    <string name="title_activity_sending_notification">Enviando notificación</string>
    <string name="order_sent">La notificaión fue enviada al cliente</string>
    <string name="back">Volver</string>
    <string name="drawer_menu_logout">Cerrar Sesión</string>
    <string name="network_not_available">Necesitas una conexión a internet para usar la aplicación</string>
    <string name="network_dialog_title">Sin Conexión</string>
    <string name="try_again">Intentar de nuevo</string>
    <string name="current_categories">Categorías actuales</string>
    <string name="request_not_updated">Hubo un problema al enviar la información. Por favor vuelve a intentarlo</string>
    <string name="add_categories">Agregar categorías</string>
    <string name="delete_categories">Eliminar categorías</string>
    <string name="no_more_categories_to_add">No hay más categorías por agregar</string>
    <string name="delete_your_category">Elige la categoría que deseas eliminar</string>
    <string name="no_more_categories_to_delete">No hay más categorías por eliminar</string>
    <string name="save_business_image">Cambiar imagen</string>
    <string name="select_image_title">Elige una opción</string>
    <string name="image_not_saved">No se pudo guardar la imagen. Se guardará el resto de la información</string>
    <string name="maybe_the_next_time">:( Quizas en otra ocasión</string>
    <string name="we_could_not_comunicate_with_our_mothership">Hubo un problema al enviar la información, intentalo de nuevo</string>
    <string name="account_save_changes">Guardar cambios</string>

    <array name="select_image">
        <item>Cámara</item>
        <item>Galerìa</item>

    </array>

    <string name="account_hint_name">Nombre</string>
    <string name="account_hint_lastname">Apellidos</string>
    <string name="account_hint_phone">Teléfono</string>
    <string name="account_hint_email">Email</string>
    <string name="title_activity_account">Mi cuenta</string>
    <string name="title_activity_password">Cambiar contraseña</string>

    <string name="new_password">Nuevo password</string>
    <string name="old_password">Password actual</string>
    <string name="passwords_must_been_the_same">No coincide con el nuevo password</string>
    <string name="you_can_not_use_the_same_password">El nuevo password debe ser diferente al anterior</string>
    <string name="terminate_service">Finalizar servicio</string>
    <string name="my_rating">Calificación obtenida</string>
    <string name="drawer_menu_password">Password</string>
    <string name="cancel_service">Cancelar servicio</string>
    <string name="request_date">Fecha para realizar el servicio</string>
    <string name="account_data_saved">Datos guardados</string>
    <string name="account_data_error">Hubo un problema al enviar la informacion</string>
    <string name="invalid_current_password">Password actual incorrecto</string>
    <string name="password_updated">Password guardado</string>
    <string name="error_while_updating_password">Hubo un problema al guardar el password, intentalo de nuevo</string>
    <string name="error_while_login">Hubo un problema cierra la sesión y logueate con el nuevo pasword</string>
    <string name="empty_requests">No hay peticiones</string>
    <string name="confirm_end_service_message">¿Deseas finalizar el servicio?</string>
    <string name="confirm_cancel_service_message">¿Deseas cancelar el servicio?</string>
    <string name="confirm_title">Confirmar</string>
    <string name="can_not_terminate_service">El servicio ya se habia cancelado</string>
    <string name="can_not_cancel_service">El servicio ya ha finalizado</string>

</resources>
