<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menu_account"
            android:checked="false"
            android:title="@string/drawer_menu_account"
            android:icon="@drawable/ic_account_circle_black_48dp"

            />


        <item
            android:id="@+id/menu_password"
            android:checked="false"
            android:title="@string/drawer_menu_password"
            android:icon="@drawable/ic_lock_black_24dp"/>
        <!--
        <item
            android:id="@+id/menu_help"
            android:checked="false"
            android:title="@string/drawer_menu_help"
            android:icon="@drawable/ic_help_black_48dp"
            />
            -->
        <item
            android:id="@+id/menu_logout"
            android:checked="false"
            android:title="@string/drawer_menu_logout"
            android:icon="@drawable/ic_exit_to_app_black_48dp"
            />

    </group>


</menu>
