<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wezen.madisonpartner.account.AccountActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/accountToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/accountToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingRight="@dimen/account_activity_right_padding"
            android:paddingEnd="@dimen/account_activity_right_padding"
            android:paddingLeft="@dimen/account_activity_left_padding"
            android:paddingStart="@dimen/account_activity_left_padding"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/account_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:border_color="#FF000000"
                android:layout_marginTop="@dimen/account_image_top_margin"
                android:layout_marginBottom="@dimen/account_image_bottom_margin"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/ColorTextInputLayout"
                android:layout_marginBottom="@dimen/elements_margin">

                <EditText
                    android:id="@+id/accountNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/account_hint_name"
                    android:inputType="textPersonName"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/ColorTextInputLayout"
                android:layout_marginBottom="@dimen/elements_margin">

                <EditText
                    android:id="@+id/accountLastNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/account_hint_lastname"
                    android:inputType="textPersonName"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/ColorTextInputLayout"
                android:layout_marginBottom="@dimen/elements_margin">

                <EditText
                    android:id="@+id/accountPhoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/account_hint_phone"
                    android:inputType="phone"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/ColorTextInputLayout"
                android:layout_marginBottom="@dimen/elements_margin">

                <EditText
                    android:id="@+id/accountEmailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/account_hint_email"
                    android:inputType="textEmailAddress"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    />

            </android.support.design.widget.TextInputLayout>
            


        </LinearLayout>

    </ScrollView>


    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:src="@drawable/ic_done_white_24dp"
        android:id="@+id/accountSave"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:elevation="@dimen/elevation_fab_map"
        app:backgroundTint="@color/accent" />



</RelativeLayout>
